Fix settings still visible on web fullscreen and line height problem

--- a/style/style-gui-settings.scss
+++ b/style/style-gui-settings.scss
@@ -8,7 +8,7 @@
     top: 0;
     left: 0;
     width: 24px;
-    z-index: 100000;
+    z-index: 999999;
 }
 .gui-settings
 {
@@ -82,6 +82,7 @@
     box-shadow: 0px 3px 20px 2px #0004;
     display: flex;
     flex-direction: column;
+    line-height: initial;
 }
 .gui-settings-footer,
 .gui-settings-header
